[gd_scene load_steps=35 format=3 uid="uid://cbslel71cfdb3"]

[ext_resource type="Script" uid="uid://nrfi2y2wrie" path="res://Scripts/main.gd" id="1_0ld40"]
[ext_resource type="Texture2D" uid="uid://dpop7ene1vyks" path="res://Tiny Swords (Free Pack)/Units/Blue Units/ExtraSprites/warrioratt1.png" id="2_ya4ey"]
[ext_resource type="Texture2D" uid="uid://dlp61hr2qphx1" path="res://Tiny Swords (Free Pack)/Units/Blue Units/ExtraSprites/warrioratt12.png" id="3_eb6dy"]
[ext_resource type="Texture2D" uid="uid://cspyikifexb1k" path="res://Tiny Swords (Free Pack)/Units/Blue Units/ExtraSprites/warrioratt13.png" id="4_trceg"]
[ext_resource type="Texture2D" uid="uid://dhm8m8x0hqcxu" path="res://Tiny Swords (Free Pack)/Units/Blue Units/ExtraSprites/warrioratt14.png" id="5_a8y0u"]
[ext_resource type="Texture2D" uid="uid://das67lybenstd" path="res://Tiny Swords (Free Pack)/Units/Blue Units/ExtraSprites/warioratt8.5.png" id="6_jkv2x"]
[ext_resource type="Texture2D" uid="uid://dvw22p3irib55" path="res://Tiny Swords (Free Pack)/Units/Blue Units/ExtraSprites/warrioratt2.png" id="7_jbj1t"]
[ext_resource type="Texture2D" uid="uid://btxca80fqqoiy" path="res://Tiny Swords (Free Pack)/Units/Blue Units/ExtraSprites/warrioratt22.png" id="8_muem4"]
[ext_resource type="Texture2D" uid="uid://116cwh5g5ats" path="res://Tiny Swords (Free Pack)/Units/Blue Units/ExtraSprites/warrioratt23.png" id="9_dp3eg"]
[ext_resource type="Texture2D" uid="uid://inlnl1dvxyeb" path="res://Tiny Swords (Free Pack)/Units/Blue Units/ExtraSprites/warrioratt24.png" id="10_0ld40"]
[ext_resource type="Texture2D" uid="uid://cu42rt1fcbfv" path="res://Tiny Swords (Free Pack)/Units/Blue Units/ExtraSprites/warioratt9.5.png" id="11_gqmmt"]
[ext_resource type="Texture2D" uid="uid://cckwe6jas61cj" path="res://Tiny Swords (Free Pack)/Units/Blue Units/ExtraSprites/warrioridle1.png" id="12_0ld40"]
[ext_resource type="Texture2D" uid="uid://c5a0l752btlhx" path="res://Tiny Swords (Free Pack)/Units/Blue Units/ExtraSprites/warrioridle12.png" id="13_gqmmt"]
[ext_resource type="Texture2D" uid="uid://b6tvsdciu1mbc" path="res://Tiny Swords (Free Pack)/Units/Blue Units/ExtraSprites/warrioridle13.png" id="14_yc10j"]
[ext_resource type="Texture2D" uid="uid://c6eg46hk1n0s2" path="res://Tiny Swords (Free Pack)/Units/Blue Units/ExtraSprites/warrioridle14.png" id="15_jscy8"]
[ext_resource type="Texture2D" uid="uid://bllxut0orw6wp" path="res://Tiny Swords (Free Pack)/Units/Blue Units/ExtraSprites/warrioridle15.png" id="16_pm3ni"]
[ext_resource type="Texture2D" uid="uid://bfjihx2ybmqy0" path="res://Tiny Swords (Free Pack)/Units/Blue Units/ExtraSprites/warrioridle16.png" id="17_y6deb"]
[ext_resource type="Texture2D" uid="uid://crhpfpvaf6fxu" path="res://Tiny Swords (Free Pack)/Units/Blue Units/ExtraSprites/warrioridle17.png" id="18_og1vs"]
[ext_resource type="Texture2D" uid="uid://b83bly7o0igrh" path="res://Tiny Swords (Free Pack)/Units/Blue Units/ExtraSprites/warrioridle18.png" id="19_2wyq8"]
[ext_resource type="Texture2D" uid="uid://bvnxmi7u1wgmj" path="res://Tiny Swords (Free Pack)/Units/Blue Units/Warrior/Warrior_Run.png" id="21_yc10j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sgp6g"]

[sub_resource type="Resource" id="Resource_o5qli"]
metadata/__load_path__ = "res://Tiny Swords (Free Pack)/UnitsTextureRect/WarAtt/warriorattack1.png"

[sub_resource type="Animation" id="Animation_fuf3a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("Resource_o5qli")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Knight2:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("19_2wyq8")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Knight3:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("19_2wyq8")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../../../../Upgrades/MarginContainer/VBoxContainer/WinButton:theme_override_styles/normal:bg_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.9999197, 0.31169233, 0.35027128, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../../../../Upgrades/MarginContainer/VBoxContainer/WinButton:theme_override_styles/normal:shadow_offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Knight2:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../Knight3:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("../../../../../../../../../Game_Over:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("../../../../../../../../../Game_Over:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("../../../../../../../../../Game_Over:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(750, 0)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("../../../../../../../../../Label:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("../../../../../../../../../Label:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_kmb1v"]
resource_name = "attack"
length = 1.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_ya4ey"), ExtResource("2_ya4ey"), ExtResource("3_eb6dy"), ExtResource("4_trceg"), ExtResource("5_a8y0u"), ExtResource("6_jkv2x"), ExtResource("6_jkv2x"), ExtResource("6_jkv2x"), ExtResource("7_jbj1t"), ExtResource("8_muem4"), ExtResource("9_dp3eg"), ExtResource("10_0ld40"), ExtResource("11_gqmmt"), ExtResource("11_gqmmt"), ExtResource("11_gqmmt"), ExtResource("11_gqmmt")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Knight2:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_ya4ey"), ExtResource("2_ya4ey"), ExtResource("3_eb6dy"), ExtResource("4_trceg"), ExtResource("5_a8y0u"), ExtResource("6_jkv2x"), ExtResource("6_jkv2x"), ExtResource("6_jkv2x"), ExtResource("7_jbj1t"), ExtResource("8_muem4"), ExtResource("9_dp3eg"), ExtResource("10_0ld40"), ExtResource("11_gqmmt"), ExtResource("11_gqmmt"), ExtResource("11_gqmmt"), ExtResource("11_gqmmt")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Knight3:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_ya4ey"), ExtResource("2_ya4ey"), ExtResource("3_eb6dy"), ExtResource("4_trceg"), ExtResource("5_a8y0u"), ExtResource("6_jkv2x"), ExtResource("6_jkv2x"), ExtResource("6_jkv2x"), ExtResource("7_jbj1t"), ExtResource("8_muem4"), ExtResource("9_dp3eg"), ExtResource("10_0ld40"), ExtResource("11_gqmmt"), ExtResource("11_gqmmt"), ExtResource("11_gqmmt"), ExtResource("11_gqmmt")]
}

[sub_resource type="Animation" id="Animation_pibwh"]
resource_name = "idle"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("12_0ld40"), ExtResource("13_gqmmt"), ExtResource("14_yc10j"), ExtResource("15_jscy8"), ExtResource("16_pm3ni"), ExtResource("17_y6deb"), ExtResource("18_og1vs"), ExtResource("19_2wyq8"), ExtResource("19_2wyq8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Knight2:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("12_0ld40"), ExtResource("13_gqmmt"), ExtResource("14_yc10j"), ExtResource("15_jscy8"), ExtResource("16_pm3ni"), ExtResource("17_y6deb"), ExtResource("18_og1vs"), ExtResource("19_2wyq8"), ExtResource("19_2wyq8")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Knight3:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("12_0ld40"), ExtResource("13_gqmmt"), ExtResource("14_yc10j"), ExtResource("15_jscy8"), ExtResource("16_pm3ni"), ExtResource("17_y6deb"), ExtResource("18_og1vs"), ExtResource("19_2wyq8"), ExtResource("19_2wyq8")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../../../../../../../../Game_Over:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Knight3:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Knight2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_gqmmt"]
resource_name = "run off"
length = 5.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Knight2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Knight3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../../../../../../../../Game_Over:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../../../../../../../../Game_Over:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../../../../../../../../../Game_Over:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(725, 0), Vector2(750, 0), Vector2(0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../../../../../../../../../Label:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.0481223, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2.29, 2.29)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../../../../../../../../../Label:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c6pm6"]
_data = {
&"RESET": SubResource("Animation_fuf3a"),
&"attack": SubResource("Animation_kmb1v"),
&"idle": SubResource("Animation_pibwh"),
&"run off": SubResource("Animation_gqmmt")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_jscy8"]
atlas = ExtResource("21_yc10j")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pm3ni"]
atlas = ExtResource("21_yc10j")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6deb"]
atlas = ExtResource("21_yc10j")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_og1vs"]
atlas = ExtResource("21_yc10j")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wyq8"]
atlas = ExtResource("21_yc10j")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxglm"]
atlas = ExtResource("21_yc10j")
region = Rect2(960, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_2f3dj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jscy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pm3ni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6deb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_og1vs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wyq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxglm")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ld40")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 7

[node name="MiningSpace" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_sgp6g")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/MiningSpace"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/MiningSpace/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/MiningSpace/MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/MiningSpace/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="Knight" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/MiningSpace/MarginContainer/VBoxContainer/HBoxContainer" groups=["knight"]]
texture_filter = 3
layout_mode = 2
expand_mode = 3
stretch_mode = 4

[node name="Knight2" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/MiningSpace/MarginContainer/VBoxContainer/HBoxContainer" groups=["knight"]]
texture_filter = 3
layout_mode = 2
texture = ExtResource("19_2wyq8")
expand_mode = 3
stretch_mode = 4

[node name="Knight3" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/MiningSpace/MarginContainer/VBoxContainer/HBoxContainer" groups=["knight"]]
texture_filter = 3
layout_mode = 2
texture = ExtResource("19_2wyq8")
expand_mode = 3
stretch_mode = 4

[node name="Button" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/MiningSpace/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "attack"

[node name="Upgrades" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_sgp6g")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/Upgrades"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/Upgrades/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/Upgrades/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Upgrades"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpeedUpgradeButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/Upgrades/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Spd"

[node name="OutputUpgradeButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/Upgrades/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Out"

[node name="ExtraKnightUpgrade" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/Upgrades/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Extra Knight
"

[node name="WinButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/Upgrades/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Win"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../MarginContainer/PanelContainer/MarginContainer/HBoxContainer/MiningSpace/MarginContainer/VBoxContainer/HBoxContainer/Knight")
libraries = {
&"": SubResource("AnimationLibrary_c6pm6")
}

[node name="Game_Over" type="Control" parent="."]
anchors_preset = 0
offset_left = 750.0
offset_right = 790.00006
offset_bottom = 40.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Game_Over"]
texture_filter = 1
position = Vector2(218, 255)
scale = Vector2(0.85, 0.85)
sprite_frames = SubResource("SpriteFrames_2f3dj")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Game_Over"]
texture_filter = 1
position = Vector2(373, 257)
scale = Vector2(0.85, 0.85)
sprite_frames = SubResource("SpriteFrames_2f3dj")

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="Game_Over"]
texture_filter = 1
position = Vector2(530, 256.99997)
scale = Vector2(0.85, 0.85)
sprite_frames = SubResource("SpriteFrames_2f3dj")
frame_progress = 0.547541

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -585.0
offset_top = -40.0
offset_right = -102.99997
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "gOODdow win1!!!!1111im goin gto sleep goodbuye"

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/MiningSpace/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/Upgrades/MarginContainer/VBoxContainer/SpeedUpgradeButton" to="." method="_on_speed_upgrade_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/Upgrades/MarginContainer/VBoxContainer/OutputUpgradeButton" to="." method="_on_output_upgrade_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/Upgrades/MarginContainer/VBoxContainer/ExtraKnightUpgrade" to="." method="_on_extra_knight_upgrade_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/Upgrades/MarginContainer/VBoxContainer/WinButton" to="." method="_on_win_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
